# g30

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  daemon.cpp  daemon.h
src/tcp/: server.cpp  server.h
